--- a/index.html
+++ b/index.html
@@ -1,1 +1,114 @@
-<!--Your HTML code here-->
+<!DOCTYPE html>
+<html>
+  <title>Hospital Under Medicare</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+  />
+  <style></style>
+
+  <body>
+    <div class="w3-top">
+      <div class="w3-row w3-large w3-light-grey">
+        <div class="w3-col s3">
+          <a href="#" class="w3-button w3-block">Home</a>
+        </div>
+        <div class="w3-col s3">
+          <a href="#about" class="w3-button w3-block">About</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Content -->
+    <div
+      class="w3-content"
+      style="max-width:1100px;margin-top:80px;margin-bottom:80px"
+    >
+      <div class="w3-panel">
+        <h2>
+          <b>Hospital</b>
+          <p>
+            <a
+              href="C:\Users\Shreyash\Downloads\Hospital Under Medicare\Page2.html"
+              target="_blank"
+              >MARSHALL MEDICAL CENTER SOUTH</a
+            >.
+          </p>
+          <p>
+            <a
+              href="C:\Users\Shreyash\Downloads\Hospital Under Medicare\Page3.html"
+              target="_blank"
+              >DEKALB REGIONAL MEDICAL CENTER</a
+            >.
+          </p>
+          <p>
+            <a
+              href="C:\Users\Shreyash\Downloads\Hospital Under Medicare\Page4.html"
+              target="_blank"
+              >CRESTWOOD MEDICAL CENTER</a
+            >.
+          </p>
+        </h2>
+      </div>
+      <div class="w3-row-padding" id="about">
+        <div class="w3-center w3-padding-64">
+          <span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16"
+            >About Us</span
+          >
+        </div>
+
+        <div class="w3-third w3-margin-bottom">
+          <div class="w3-card-4">
+            <img
+              src="C:\Users\Shreyash\Downloads\Hospital Under Medicare\Shreyash.jpg"
+              alt="John"
+              style="width:100%"
+            />
+            <div class="w3-container">
+              <h3>Shreyash Shetty</h3>
+              <p class="w3-opacity">Graduate Student</p>
+              <p>Masters in Business Analytics & Information Systems.</p>
+              <p>Contributed in making About page and HTML,CSS</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="w3-third w3-margin-bottom">
+          <div class="w3-card-4">
+            <img
+              src="C:\Users\Shreyash\Downloads\Hospital Under Medicare\Sunki.jpg"
+              alt="Mike"
+              style="width:100%"
+            />
+            <div class="w3-container">
+              <h3>Rohan Sunki</h3>
+              <p class="w3-opacity">Graduate Student</p>
+              <p>Masters in Business Analytics & Information Systems.</p>
+              <p>Contributed in making Home Page and HTML,CSS</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="w3-third w3-margin-bottom">
+          <div class="w3-card-4">
+            <img
+              src="C:\Users\Shreyash\Downloads\Hospital Under Medicare\Sagar.jpg"
+              alt="Jane"
+              style="width:100%"
+            />
+            <div class="w3-container">
+              <h3>Sagar Kulkarni</h3>
+              <p class="w3-opacity">Graduate Student</p>
+              <p>Masters in Business Analytics & Information Systems.</p>
+              <p>Contributed in making Data Model and HTML</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
