--- a/index.html
+++ b/index.html
@@ -30,27 +30,19 @@
     >
       <div class="w3-panel">
         <h2>
-          <b>Hospital</b>
+          <b>Details of Hospitals under Medicare</b>
           <p>
-            <a
-              href="C:\Users\Shreyash\Downloads\Hospital Under Medicare\Page2.html"
-              target="_blank"
+            <a href="Page2.html" target="_blank"
               >MARSHALL MEDICAL CENTER SOUTH</a
             >.
           </p>
           <p>
-            <a
-              href="C:\Users\Shreyash\Downloads\Hospital Under Medicare\Page3.html"
-              target="_blank"
+            <a href="Page3.html" target="_blank"
               >DEKALB REGIONAL MEDICAL CENTER</a
             >.
           </p>
           <p>
-            <a
-              href="C:\Users\Shreyash\Downloads\Hospital Under Medicare\Page4.html"
-              target="_blank"
-              >CRESTWOOD MEDICAL CENTER</a
-            >.
+            <a href="Page4.html" target="_blank">CRESTWOOD MEDICAL CENTER</a>.
           </p>
         </h2>
       </div>
@@ -63,11 +55,7 @@
 
         <div class="w3-third w3-margin-bottom">
           <div class="w3-card-4">
-            <img
-              src="C:\Users\Shreyash\Downloads\Hospital Under Medicare\Shreyash.jpg"
-              alt="John"
-              style="width:100%"
-            />
+            <img src="Shreyash.jpg" alt="John" style="width:100%" />
             <div class="w3-container">
               <h3>Shreyash Shetty</h3>
               <p class="w3-opacity">Graduate Student</p>
@@ -79,11 +67,7 @@
 
         <div class="w3-third w3-margin-bottom">
           <div class="w3-card-4">
-            <img
-              src="C:\Users\Shreyash\Downloads\Hospital Under Medicare\Sunki.jpg"
-              alt="Mike"
-              style="width:100%"
-            />
+            <img src="Sunki.jpg" alt="Mike" style="width:100%" />
             <div class="w3-container">
               <h3>Rohan Sunki</h3>
               <p class="w3-opacity">Graduate Student</p>
@@ -95,11 +79,7 @@
 
         <div class="w3-third w3-margin-bottom">
           <div class="w3-card-4">
-            <img
-              src="C:\Users\Shreyash\Downloads\Hospital Under Medicare\Sagar.jpg"
-              alt="Jane"
-              style="width:100%"
-            />
+            <img src="Sagar.jpg" alt="Jane" style="width:100%" />
             <div class="w3-container">
               <h3>Sagar Kulkarni</h3>
               <p class="w3-opacity">Graduate Student</p>
