changed image location

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="w3-third w3-margin-bottom">
           <div class="w3-card-4">
-            <img src="Shreyash.jpg" alt="John" style="width:100%" />
+            <img src="img/Shreyash.jpg" alt="John" style="width:100%" />
             <div class="w3-container">
               <h3>Shreyash Shetty</h3>
               <p class="w3-opacity">Graduate Student</p>
@@ -67,7 +67,7 @@
 
         <div class="w3-third w3-margin-bottom">
           <div class="w3-card-4">
-            <img src="Sunki.jpg" alt="Mike" style="width:100%" />
+            <img src="img/Sunki.jpg" alt="Mike" style="width:100%" />
             <div class="w3-container">
               <h3>Rohan Sunki</h3>
               <p class="w3-opacity">Graduate Student</p>
@@ -79,7 +79,7 @@
 
         <div class="w3-third w3-margin-bottom">
           <div class="w3-card-4">
-            <img src="Sagar.jpg" alt="Jane" style="width:100%" />
+            <img src="img/Sagar.jpg" alt="Jane" style="width:100%" />
             <div class="w3-container">
               <h3>Sagar Kulkarni</h3>
               <p class="w3-opacity">Graduate Student</p>
